--- a/src/style.scss
+++ b/src/style.scss
@@ -1,213 +1,214 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap");
 
 * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Source Sans Pro", sans-serif;
-    font-weight: 600;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 600;
 }
 
 .form-container {
-    background-color: #b2e9ff;
-    height: 100vh;
+  background-color: #b2e9ff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .form-wrapper {
+    background-color: white;
+    padding: 20px 60px;
+    border-radius: 10px;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
     align-items: center;
-    justify-content: center;
 
+    .logo {
+      color: #00a2ff;
+      font-weight: 900;
+      font-size: 30px;
+    }
 
-    .form-wrapper {
-        background-color: white;
-        padding: 20px 60px;
-        border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        align-items: center;
-
-        .logo {
-            color: #00a2ff;
-            font-weight: 900;
-            font-size: 30px;
-        }
-
-        .title {
-            color: #00a2ff;
-            font-size: 20px;
-        }
-
-    
+    .title {
+      color: #00a2ff;
+      font-size: 20px;
+    }
 
     form {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
 
-        input {
-            padding: 10px 15px;
+      input {
+        padding: 10px 15px;
+        border: none;
+        border-bottom: 1px solid #b2e9ff;
+        outline: none;
+        width: 250px;
+
+        &::placeholder {
+          color: rgba(0, 0, 0, 0.438);
+        }
+      }
+      #upload {
+        display: none;
+      }
+      button {
+        background-color: #00a2ff;
+        border: none;
+        padding: 8px;
+        color: white;
+        font-size: 15px;
+        font-weight: 900;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #0084ff;
+        }
+      }
+
+      label {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        width: 150px;
+        font-size: 15px;
+
+        img {
+          width: 40px;
+        }
+        span {
+          color: red;
+        }
+      }
+    }
+  }
+  p {
+    span {
+      cursor: pointer;
+      color: #00a2ff;
+      font-weight: bold;
+    }
+  }
+}
+
+.home {
+  background-color: rgb(65, 201, 255);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .home-container {
+    border: 5px solid white;
+    border-radius: 10px;
+    width: 65%;
+    height: 80%;
+    display: flex;
+    overflow: hidden;
+
+    .sidebar {
+      flex: 1;
+      background-color: #00859c;
+
+      .navbar {
+        display: flex;
+        align-items: center;
+        background-color: #00afce;
+        height: 50px;
+        padding: 10px;
+        justify-content: space-between;
+        color: #303030;
+
+        .logo {
+          font-weight: bold;
+        }
+        .user {
+          display: flex;
+          gap: 10px;
+          align-items: center;
+
+          img {
+            background-color: white;
+            height: 24px;
+            width: 24px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+          button {
+            background-color: #ffffff;
+            font-size: 13px;
             border: none;
-            border-bottom: 1px solid #b2e9ff;
+            cursor: pointer;
+            color: grey;
+            padding: 5px;
+          }
+        }
+      }
+      .search {
+        border-bottom: 1px solid grey;
+
+        .search-form {
+          padding: 10px;
+
+          input {
+            background-color: transparent;
+            border: none;
             outline: none;
-            width: 250px;
+            color: white;
 
             &::placeholder {
-                color: rgba(0, 0, 0, 0.438);
+              color: lightgray;
             }
-
-            
+          }
         }
-        #upload {
-            display: none;
-        }
-        button {
-            background-color: #00a2ff;
-            border: none;
-            padding: 8px;
-            color: white;
-            font-size: 15px;
-            font-weight: 900;
-            cursor: pointer;
-
-            &:hover {
-                background-color: #0084ff;
-            }
-        }
-
-        label {
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            width: 150px;
-            font-size: 15px;
-
-            img {
-                width: 40px;
-            }
-            span{
-                color: red;
-            }
-        }
-        
-        
-    }
-    
-}
-p {
-    span {
-        cursor: pointer;
-        color: #00a2ff;
-        font-weight: bold;
-    }
-}
-
-}
-
-.home{
-    background-color: rgb(65, 201, 255);
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    .home-container{
-        border: 5px solid white;
-        border-radius: 10px;
-        width: 65%;
-        height: 80%;
+      }
+      .user-chat {
         display: flex;
-        overflow: hidden;
+        padding: 10px;
+        align-items: center;
+        gap: 10px;
+        color: white;
+        cursor: pointer;
 
-        .sidebar{
-            flex: 1;
-            background-color: #00859c;
-
-            .navbar{
-                display: flex;
-                align-items: center;
-                background-color: #00afce;
-                height: 50px;
-                padding: 10px;
-                justify-content: space-between;
-                color: #303030;
-
-                .logo{
-                    font-weight: bold;
-                }
-                .user{
-                    display: flex;
-                    gap: 10px;
-                    align-items: center;
-
-                    img{
-                        background-color: white;
-                        height: 24px;
-                        width: 24px;
-                        border-radius: 50%;
-                        object-fit: cover;
-                    }
-                    button{
-                        background-color: #ffffff;
-                        font-size: 13px;
-                        border: none;
-                        cursor: pointer;
-                        color: grey;
-                        padding: 5px;
-                    }
-                }
-            }
-            .search{
-                border-bottom:1px solid grey ;
-
-                .search-form{
-                    padding: 10px;
-
-                    input{
-                        background-color: transparent;
-                        border: none;
-                        outline: none;
-                        color: white;
-
-                        &::placeholder{
-                            color: lightgray;
-                        }
-                    }
-                }
-            }
-            .user-chat{
-                display: flex;
-                padding: 10px;
-                align-items: center;
-                gap: 10px;
-                color: white;
-                cursor: pointer;
-                
-                &:hover{
-                    background-color:#00afce ;
-                }
-
-                img{
-                    height: 50px;
-                    width: 50px;
-                    border-radius: 50%;
-                    object-fit: cover;
-                }
-                .user-chat-info{
-
-                    span{
-                        font-size: 18px;
-                        font-weight: bolder;
-                        text-transform: capitalize;
-                    }
-                    p{
-                        font-size: 14px;
-                        color: lightgray;
-                    }
-                }
-            }
+        &:hover {
+          background-color: #00afce;
         }
-        .chat{
-            flex:2;
+
+        img {
+          height: 50px;
+          width: 50px;
+          border-radius: 50%;
+          object-fit: cover;
         }
+        .user-chat-info {
+          span {
+            font-size: 18px;
+            font-weight: bolder;
+            text-transform: capitalize;
+          }
+          p {
+            font-size: 14px;
+            color: lightgray;
+          }
+        }
+      }
     }
+    .chat {
+      flex: 2;
+    }
+  }
+}
+.work-on-progress {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 30px;
+  background-color: #b2e9ff;
+  font-family: "Source Sans Pro", sans-serif;
 }
